Complete CRUD, Authenticaion
