# src/controllers/UserController.ts
@@ -3,25 +3,33 @@ import jwt from "jsonwebtoken";
 import md5 from "md5";
 import lodash from "lodash";
 import UserModel from "../models/User";
+import { StatusCodes } from "http-status-codes";
+
+interface DecodeType {
+  _id: string;
+  user_id: string;
+  iat: number;
+  exp: number;
+}
 
 export default class UserController {
   public static async GetAllUsers(req: Request, res: Response) {
     try {
       const users = await UserModel.find();
-      res.status(200).json(users);
+      return res.status(200).json(users);
     } catch (err: any) {
       console.log(err.message);
-      res.status(404).json({ error: err.message });
+      return res.status(404).json({ error: err.message });
     }
   }
   public static async GetUser(req: Request, res: Response) {
     try {
       const { user_id } = req.params;
       const user = await UserModel.findById(user_id);
-      res.status(200).json(user);
+      return res.status(200).json(user);
     } catch (err: any) {
       console.log(err.message);
-      res.status(404).json({ error: err.message });
+      return res.status(404).json({ error: err.message });
     }
   }
   public static async Register(req: Request, res: Response) {
@@ -35,48 +43,62 @@ export default class UserController {
           .json({ message: "Username is already existed!" });
       } else {
         await UserModel.create({ username, name, password: passwordHash });
-        res.status(201).json({ message: "Register Succsessfully!" });
+        return res.status(201).json({ message: "Register Succsessfully!" });
       }
     } catch (err: any) {
       console.log(err.message);
-      res.status(400).json({ error: err.message });
+      return res.status(400).json({ error: err.message });
     }
   }
   public static async Login(req: Request, res: Response) {
     try {
       const { username } = req.body;
       const password = md5(req.body.password);
+
       if (!username || !password) {
-        res.status(400).json({ message: "Username doesn't exist" });
+        return res.status(404).json({ message: "Username doesn't exist" });
       }
       const user = await UserModel.findOne({ username });
       if (!user || user.password !== password) {
-        res
+        return res
           .status(400)
           .json({ message: "Username or password is not correct!" });
       }
       const userid = user._id;
       const token = await jwt.sign(
-        { _id: userid },
+        { user_id: userid },
         process.env.KEY_JWT || "ABC",
         { expiresIn: 60 * 60 * 4 }
       );
-      res.status(200).json({ token, userid });
+      return res.status(200).json({ token, userid });
     } catch (err: any) {
       console.log(err.message);
-      res.status(400).json({ error: err.message });
+      return res.status(400).json({ error: err.message });
     }
   }
   public static async UpdateUser(req: Request, res: Response) {
     try {
       const { user_id } = req.params;
+      const token = req.headers["authorization"]?.split(" ")[1] || "";
+      if (!token) {
+        return res
+          .status(StatusCodes.UNAUTHORIZED)
+          .json({ message: "You have to login!" });
+      }
       const user = await UserModel.findById(user_id);
+      const decode = jwt.decode(token) as DecodeType;
+
+      if (decode.user_id !== user._id.toString()) {
+        return res
+          .status(StatusCodes.FORBIDDEN)
+          .json({ message: "You don't have permission to do this" });
+      }
       lodash.extend(user, req.body);
       user?.save();
-      res.status(200).json("Update Successful!");
+      return res.status(200).json("Update Successful!");
     } catch (err: any) {
       console.log(err.message);
-      res.status(400).json({ error: err.message });
+      return res.status(400).json({ error: err.message });
     }
   }
 }
