# swagger.yaml
@@ -13,6 +13,11 @@ definition:
       description: "User API Documentation"
 
   components:
+    securitySchemes:
+      bearerAuth:
+        type: http
+        scheme: bearer
+        bearerFormat: JWT
     schemas:
       Post:
         type: object
@@ -33,9 +38,7 @@ definition:
             type: string
             description: Full content of post
             example: This is full content string
-          author_id:
-            type: string
-            example: 1
+
       User:
         type: object
         properties:
@@ -65,6 +68,8 @@ definition:
                   items:
                     type: object
       post:
+        security:
+          - bearerAuth: []
         tags:
           - "Post"
         summary: Create new post
@@ -76,14 +81,193 @@ definition:
             application/json:
               schema:
                 $ref: "#/components/schemas/Post"
-            application/xml:
-              schema:
-                $ref: "#/components/schemas/Post"
-            application/x-www-form-urlencoded:
-              schema:
-                $ref: "#/components/schemas/Post"
         responses:
           "201":
             description: "Created new post successfully"
-
+    /posts/{id}:
+      get:
+        tags:
+          - "Post"
+        summary: Find a post by Id.
+        description: ""
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "id"
+            in: path
+            description: "Post id to find"
+            required: true
+            type: string
+        responses:
+          "404":
+            description: "Id not found"
+          "200":
+            description: "Get a Post"
+      put:
+        security:
+          - bearerAuth: []
+        tags:
+          - "Post"
+        summary: Update a post by Id.
+        description: ""
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "id"
+            in: path
+            description: "Post id to update"
+            required: true
+            type: string
+        requestBody:
+          description: "Update an existed post"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Post"
+        responses:
+          "404":
+            description: "Id not found"
+          "200":
+            description: "Updated Post"
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Post"
+      delete:
+        security:
+          - bearerAuth: []
+        tags:
+          - "Post"
+        summary: Delete a post by Id.
+        description: ""
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "id"
+            in: path
+            description: "Post id to delete"
+            required: true
+            type: string
+        responses:
+          "404":
+            description: "Id not found"
+          "200":
+            description: "Deleted Post"
+    /users:
+      get:
+        tags:
+          - "User"
+        summary: Returns list of Users.
+        description: ""
+        responses:
+          "200":
+            description: A JSON array of Users
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    type: object
+    /users/{id}:
+      get:
+        tags:
+          - "User"
+        summary: Find a user by Id.
+        description: ""
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "id"
+            in: path
+            description: "User id to find"
+            required: true
+            type: string
+        responses:
+          "404":
+            description: "Id not found"
+          "200":
+            description: "Return a object of user"
+      put:
+        security:
+          - bearerAuth: []
+        tags:
+          - "User"
+        summary: Update a user by Id.
+        description: ""
+        consumes:
+          - "application/json"
+        produces:
+          - "application/json"
+        parameters:
+          - name: "id"
+            in: path
+            description: "User id to update"
+            required: true
+            type: string
+        requestBody:
+          description: "Update an existed User"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Post"
+        responses:
+          "404":
+            description: "Id not found"
+          "200":
+            description: "Updated User"
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Post"
+    /users/register:
+      post:
+        tags:
+          - "User"
+        summary: Sign up a new User
+        consumes:
+          - "application/json"
+        requestBody:
+          description: "Create new User"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        responses:
+          "201":
+            description: "Created new post successfully"
+    /users/login:
+      post:
+        tags:
+          - "User"
+        summary: Sign in to get token
+        consumes:
+          - "application/json"
+        requestBody:
+          description: "Login to get jwt token"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  username:
+                    type: string
+                    example: huutin123
+                  password:
+                    type: string
+                    example: mypassword
+        responses:
+          "200":
+            description: "Login successfully and return a jwt token"
+          "404":
+            description: "Username doesn't exist"
+          "400":
+            description: "Wrong password"
 apis: ["src/routes/*.ts"]
